# meme_battle_backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
centrifuge/: config.json
docs/: game_state_snapshot_ru.md  websockets_docs_en.md  websockets_docs_ru.md
migrations/: 001_extensions_and_enums.sql  002_users_and_auth.sql  003_media.sql  004_game.sql  005_realtime_outbox.sql  006_outbox_notify_trigger.sql
observability/: loki-config.yml  otelcol-config.yml  tempo-config.yml
observability/grafana/: datasources.yml
overwrite/: custom.css  index.html
src/: lib.rs  main.rs
src/common/: mod.rs
src/common/app/: bootstrap.rs  config.rs  mod.rs  router.rs  state.rs  swagger.rs
src/common/app/adapters/: game_media_manager_adapter.rs  game_notification_sender_adapter.rs  game_token_generator_adapter.rs  media_asset_to_user_avatar_adapter.rs  mod.rs
src/common/app/state/: auth.rs  media.rs  realtime.rs  user.rs
src/common/http/: current_user.rs  dto.rs  error.rs  mod.rs  role.rs
src/common/observability/: mod.rs  opentelemetry.rs
src/common/security/: hash_util.rs  jwt.rs  mod.rs
src/common/serde/: mod.rs
src/features/: mod.rs
src/features/auth/: mod.rs
src/features/auth/api/: handlers.rs  routes.rs
src/features/auth/api/dto/: request.rs
src/features/auth/api/handlers/: auth.rs  (+1 more)
src/features/auth/domain/: model.rs
src/features/game/: mod.rs
src/features/game/api/: dto.rs  handlers.rs  routes.rs
src/features/game/application/: mod.rs
src/features/game/domain/: model.rs
src/features/game/infra/: mod.rs  timer_worker.rs
src/features/media/: mod.rs
src/features/media/api/: handlers.rs  routes.rs
src/features/media/domain/: model.rs
src/features/realtime/: mod.rs
src/features/realtime/infra/: mod.rs  processor.rs
src/features/user/: mod.rs
src/features/user/api/: handlers.rs  mod.rs  routes.rs
src/features/user/domain/: model.rs
tests/: test_auth_routes.rs  test_centrifugo_websocket.rs  test_game_flow.rs  test_game_recovery.rs  test_game_routes.rs  test_helpers.rs  test_real_game_centrifugo.rs  test_user_routes.rs
(+109 files in other folders)
